--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.0.1",
-    "autoprefixer": "10.4.5",
-    "bootstrap": "^5.2.0-beta1",
+    "antd": "^5.1.7",
+    "autoprefixer": "10.4.13",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.5",
+    "react-hook-form": "^7.43.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.2.2"
+    "web-vitals": "^3.1.1",
+    "web3": "^1.8.0"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
