--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "antd": "^5.1.7",
-    "autoprefixer": "10.4.13",
-    "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.4",
     "web-vitals": "^3.1.1",
     "web3": "^1.8.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "nth-check": ">=2.0.1",
+    "postcss": "^8.4.21",
     "react-scripts": "^5.0.1",
-    "nth-check": ">=2.0.1"
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
