--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "antd": "^5.1.7",
     "chart.js": "^4.2.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
