--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "ajv": "^6.9.1",
+    "ajv-keywords": "^3.5.2",
     "antd": "^5.1.7",
     "chart.js": "^4.2.0",
-    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -14,12 +15,14 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.4",
+    "reactstrap": "^9.1.8",
     "web-vitals": "^3.1.1",
-    "web3": "^1.8.0"
+    "web3": "^1.8.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "nth-check": ">=2.0.1",
+    "autoprefixer": "^10.4.14",
+    "nth-check": "^2.1.1",
     "postcss": "^8.4.21",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.4"
